--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "author": "",
   "license": "MIT",
+    "dependencies": {
+    "ember-cli-amd": "git@github.com:ArcGIS/ember-cli-amd.git"
+  },
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "1.13.7",
